<resources>
    <string name="app_name">Simple Solver</string>
    <string name="image_description">Sample to solve</string>
    <string name="text_view_y_hint">y =</string>
    <string name="edit_text_x_hint">x</string>
    <string name="edit_text_a_hint">a</string>
    <string name="edit_text_b_hint">b</string>
    <string name="edit_text_c_hint">c</string>
    <string name="button_solve_text">Solve</string>
    <string name="button_clear_text">Clear</string>
</resources>